--- a/pages/login.html
+++ b/pages/login.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Вход в систему</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <form class="loginForm" method="get" action="main.html">
