--- a/pages/parts/footer.html
+++ b/pages/parts/footer.html
@@ -1,5 +1,9 @@
 <footer class="footer">
-  <img src="./images/vk.png" class="footer__img" />
-  <img src="./images/instagram.png" class="footer__img" />
-  <img src="./images/twt.svg" class="footer__img" />
+  <img src="./images/VK.com-logo.svg" alt="VK logo" class="footer__img" />
+  <img
+    src="./images/Instagram-Logo.wine.svg"
+    alt="Instagram logo"
+    class="footer__img"
+  />
+  <img src="./images/twt.svg" alt="twt logo" class="footer__img" />
 </footer>
