--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,6 +1,11 @@
 <div class="head">
-  <input type="checkbox" class="head_burger" />
+  <!--  <input type="checkbox" class="head_burger" id='burger-check' />-->
+  <!--  <label>-->
 
+  <label class="head_burgerLabel"> Персоональный блог </label>
+  <input type="checkbox" class="head_burger" id="burger-check" />
+
+  <!--  </label>-->
   <div class="head__burger">
     <span class="head__firstSpan"></span>
     <span class="head__mediumSpan"></span>
@@ -8,7 +13,12 @@
   </div>
   <div class="headInfo">
     <a class="head__logo" href="main.html">
-      <img src="./images/post-it.png" />
+      <img
+        src="./images/post-it.svg"
+        alt="blog post logo"
+        width="48px"
+        height="48px"
+      />
     </a>
     <input class="head__search" type="text" placeholder="Поиск" />
   </div>
