--- a/pages/parts/posts.html
+++ b/pages/parts/posts.html
@@ -3,7 +3,7 @@
 <main class="mainPosts">
   <article class="card">
     <div class="card__header">
-      <img src="./images/post-it.png" class="card__logo" />
+      <img src="./images/post-it.svg" alt="card logo" class="card__logo" />
       <h4><b>Основные подходы к позиционированию элементов</b></h4>
     </div>
 
@@ -20,7 +20,7 @@
 
   <article class="card">
     <div class="card__header">
-      <img src="./images/post-it.png" class="card__logo" />
+      <img src="./images/post-it.svg" alt="card logo" class="card__logo" />
       <h4>
         <b>Использование CSS-фреймворков - нужно ли браться за Бутстарп?</b>
       </h4>
@@ -39,7 +39,7 @@
 
   <article class="card">
     <div class="card__header">
-      <img src="./images/post-it.png" class="card__logo" />
+      <img src="./images/post-it.svg" alt="card logo" class="card__logo" />
       <h4><b>Оптимизация и деплой страниц, метрики для анализа качества</b></h4>
     </div>
 
@@ -56,7 +56,7 @@
 
   <article class="card">
     <div class="card__header">
-      <img src="./images/post-it.png" class="card__logo" />
+      <img src="./images/post-it.svg" alt="card logo" class="card__logo" />
       <h4>
         <b
           >Инструменты разработки. Тестирование верстки, использование
