--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Новая статья</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Feedback page" />
   </head>
   <body>
     <%= require('html-loader?{"attributes": false}!./parts/head.html') %>
