check and fix by validator.w3.org

--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -16,8 +16,8 @@
       <img
         src="./images/post-it.svg"
         alt="blog post logo"
-        width="48px"
-        height="48px"
+        width="48"
+        height="48"
       />
     </a>
     <input class="head__search" type="text" placeholder="Поиск" />
