--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="aside">
   <header class="aside__header">Репозиотории</header>
   <article class="aside-main">
-    <p>Контент</p>
+    <h4>Контент</h4>
     <textarea class="aside-main__label" placeholder="Поиск"></textarea>
 
     <a class="aside-main_link" href="#">Репо1</a>
@@ -12,7 +12,7 @@
     <a class="aside-main_link" href="#">Репо1</a>
   </article>
   <article class="aside-main">
-    <p>Ваши команды</p>
+    <h4>Ваши команды</h4>
     <textarea class="aside-main__label" placeholder="Поиск"></textarea>
     <a class="aside-main_link" href="#">Репо1</a>
     <a class="aside-main_link" href="#">Репо1</a>
