--- a/pages/post_list.html
+++ b/pages/post_list.html
@@ -12,9 +12,9 @@
     <div class="container">
       <!--   <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>-->
       <div class="page">
-        <main class="main">
+        <div class="main">
           <%= require('html-loader?{"attributes": false}!./parts/posts.html') %>
-        </main>
+        </div>
       </div>
     </div>
     <%= require('html-loader?{"attributes": false}!./parts/footer.html') %>
