add text to main page

--- a/pages/main.html
+++ b/pages/main.html
@@ -99,6 +99,67 @@
               <p>Статус принято ставится от 4 баллов</p>
             </article>
           </details>
+
+          <details>
+            <summary>Сверстать страницы "xxx" с поддержкой адаптива</summary>
+
+            <h2>
+              Оптимизировать сверстаные страницы по lighthouse и проверить на
+              a11y
+            </h2>
+            <h3>
+              Цель: В процессе выполнения ДЗ вы узнаете по каким метрикам можно
+              оценивать страницу
+            </h3>
+
+            <p>Тренируются навыки</p>
+            <ul>
+              <li>использования инструментов оценки веб-страниц</li>
+              <li>оптимизация страниц под заданные параметры</li>
+            </ul>
+
+            <p>Необходимо:</p>
+            <ul>
+              <li>в репозитории прошлого задания сделать новую ветку</li>
+              <li>прогнать текущие страницы через lighthouse</li>
+              <li>сделать скриншоты оценок ДО</li>
+              <li>
+                улучшить показати Performance, Accessibility, SEO, Best
+                Practicies минимум до 95%
+              </li>
+              <li>
+                проверить страницы на https://validator.w3.org/ и исправить
+                ошибки
+              </li>
+              <li>сделать скриншоты оценок ПОСЛЕ</li>
+              <li>
+                создать пуллреквест, в описание к пуллреквесту прикрепить
+                скриншоты ДО/ПОСЛЕ (подписав)
+              </li>
+              <li>
+                ссылку на пуллреквест и на задеплоенные страницы сбросить в чат
+                с преподавателем
+              </li>
+            </ul>
+
+            <p>Критерии оценки:</p>
+            <ul>
+              <li>
+                страница имеет все показатели не ниже 95% - 1 балл за страницу
+                (не больше 4)
+              </li>
+              <li>
+                страница проходит проверку на https://validator.w3.org/ без
+                ошибок - 1 балл за страницу (не более 2)
+              </li>
+              <li>
+                страница имеет все показатели 100% - 1 балл за страницу (не
+                больше 4, если страница имеет все показатели 100 - это два балла
+                - 1 по этому пункту и 1 по прошлому) Статус принято ставится от
+                4 баллов
+              </li>
+            </ul>
+          </details>
         </main>
       </div>
     </div>
