add text to main page

--- a/pages/main.html
+++ b/pages/main.html
@@ -101,7 +101,10 @@
           </details>
 
           <details>
-            <summary>Сверстать страницы "xxx" с поддержкой адаптива</summary>
+            <summary>
+              Оптимизировать сверстаные страницы по lighthouse и проверить на
+              a11y
+            </summary>
 
             <h2>
               Оптимизировать сверстаные страницы по lighthouse и проверить на
