Сверстать страницы "xxx" с поддержкой адаптива (#2)

--- a/pages/main.html
+++ b/pages/main.html
@@ -61,6 +61,44 @@
               </ul>
             </article>
           </details>
+          <details>
+            <summary>Сверстать страницы "xxx" с поддержкой адаптива</summary>
+            <article>
+              <h2>Цель:</h2>
+
+              <h3>
+                В результате выполнения ДЗ вы адаптируете ваши страницы для
+                мобильных браузеров
+              </h3>
+
+              <p>
+                В домашнем задании тренируются навыки работы с адаптивной
+                версткой использование медиазапросов
+              </p>
+
+              <p>Необходимо</p>
+              <ul>
+                <li>в репозитоии из прошлого задания сделать новую ветку</li>
+                <li>в этой ветке добавить адаптив на страницы вашего блога</li>
+                <li>сделать пуллреквест</li>
+                <li>
+                  ссылку на изменения и на задеплоенные страницы (с указанием
+                  breakpoints ) сбросить в чат преподавателю
+                </li>
+              </ul>
+
+              <p>Критерии оценки:</p>
+              <ul>
+                <li>
+                  внешний вид страницы в мобильном и десктнопном браузере
+                  отличаются (и выглядят прилично) - 1 балл за страницу
+                  (максимум 5 баллов)
+                </li>
+                <li>eсть страница с созданием burger-menu - 1 балл</li>
+              </ul>
+              <p>Статус принято ставится от 4 баллов</p>
+            </article>
+          </details>
         </main>
       </div>
     </div>
