--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,5 +1,6 @@
 <div class="head">
-  <input type="checkbox" class="head_burger" />
+  <label class="head_burgerLabel">Персоональный блог</label>
+  <input type="checkbox" class="head_burger" id="burger-check" />
 
   <div class="head__burger">
     <span class="head__firstSpan"></span>
@@ -8,7 +9,12 @@
   </div>
   <div class="headInfo">
     <a class="head__logo" href="main.html">
-      <img src="./images/post-it.png" />
+      <img
+        src="./images/post-it.svg"
+        alt="blog post logo"
+        width="48"
+        height="48"
+      />
     </a>
     <input class="head__search" type="text" placeholder="Поиск" />
   </div>
