--- a/pages/main.html
+++ b/pages/main.html
@@ -1,171 +1,221 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="Description" content="Personal blog" />
-  </head>
-  <body>
-    <%= require('html-loader?{"attributes": false}!./parts/head.html') %>
-    <div class="container">
-      <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>
-      <div class="page">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="Description" content="Personal blog"/>
+</head>
+<body>
+<%= require('html-loader?{"attributes": false}!./parts/head.html') %>
+<div class="container">
+    <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>
+    <div class="page">
         <main class="main">
-          <details>
-            <summary>Основные подходы к позиционированию элементов</summary>
-            <article>
-              <h2>
-                Использовать препроцессор для создания страниц приложения "блог"
-                - сверстанные страницы должны быть доступны на githubpages
-              </h2>
-              <h3>
-                Цель: В результате выполнения ДЗ вы создадите верстку для вашего
-                личного блога с использование препроцессора SASS(/LESS)
-              </h3>
+            <details>
+                <summary>Основные подходы к позиционированию элементов</summary>
+                <article>
+                    <h2>
+                        Использовать препроцессор для создания страниц приложения "блог"
+                        - сверстанные страницы должны быть доступны на githubpages
+                    </h2>
+                    <h3>
+                        Цель: В результате выполнения ДЗ вы создадите верстку для вашего
+                        личного блога с использование препроцессора SASS(/LESS)
+                    </h3>
 
-              <p>В данном задании тренируются навыки:</p>
-              <ul>
-                <li>верстки страниц</li>
-                <li>использование принципов DRY при верстке</li>
-                <li>использование препроцессоров</li>
-                <li>деплой страниц на сервис github pages</li>
-              </ul>
-              <p>Необходимо:</p>
-              <ul>
-                <li>создать новый репозиторий</li>
-                <li>настроить в нем линтеры, github actions</li>
-                <li>включить проверку линтером при PR</li>
-                <li>включить деплой приложения при PR</li>
-                <li>
-                  создать сайт-блог с минимум 4мя страницами (главная, обратная
-                  связь, список записей, страница записи)
-                </li>
-                <li>создать пуллреквест с изменениями и</li>
-                <li>
-                  сбросить ссылку на PR и ссылку на задеплоенные страницы в част
-                  с преподавателем
-                </li>
-              </ul>
-              Критерии оценки: Критерии оценки:
-              <ul>
-                <li>создан репозиторий, настроены линтеры - 1 балл</li>
-                <li>
-                  настроены actions, проверка линтерами и автодеплой - 1 балл
-                </li>
-                <li>
-                  сверстаны 4 страницы с использованием препроцессора - 2 балла
-                </li>
-                <li>есть дополнительные страницы - 1 балл</li>
-                <li>использована методология BEM - 2 балла</li>
-              </ul>
-            </article>
-          </details>
-          <details>
-            <summary>Сверстать страницы "xxx" с поддержкой адаптива</summary>
-            <article>
-              <h2>Цель:</h2>
+                    <p>В данном задании тренируются навыки:</p>
+                    <ul>
+                        <li>верстки страниц</li>
+                        <li>использование принципов DRY при верстке</li>
+                        <li>использование препроцессоров</li>
+                        <li>деплой страниц на сервис github pages</li>
+                    </ul>
+                    <p>Необходимо:</p>
+                    <ul>
+                        <li>создать новый репозиторий</li>
+                        <li>настроить в нем линтеры, github actions</li>
+                        <li>включить проверку линтером при PR</li>
+                        <li>включить деплой приложения при PR</li>
+                        <li>
+                            создать сайт-блог с минимум 4мя страницами (главная, обратная
+                            связь, список записей, страница записи)
+                        </li>
+                        <li>создать пуллреквест с изменениями и</li>
+                        <li>
+                            сбросить ссылку на PR и ссылку на задеплоенные страницы в част
+                            с преподавателем
+                        </li>
+                    </ul>
+                    Критерии оценки: Критерии оценки:
+                    <ul>
+                        <li>создан репозиторий, настроены линтеры - 1 балл</li>
+                        <li>
+                            настроены actions, проверка линтерами и автодеплой - 1 балл
+                        </li>
+                        <li>
+                            сверстаны 4 страницы с использованием препроцессора - 2 балла
+                        </li>
+                        <li>есть дополнительные страницы - 1 балл</li>
+                        <li>использована методология BEM - 2 балла</li>
+                    </ul>
+                </article>
+            </details>
+            <details>
+                <summary>Сверстать страницы "xxx" с поддержкой адаптива</summary>
+                <article>
+                    <h2>Цель:</h2>
 
-              <h3>
-                В результате выполнения ДЗ вы адаптируете ваши страницы для
-                мобильных браузеров
-              </h3>
+                    <h3>
+                        В результате выполнения ДЗ вы адаптируете ваши страницы для
+                        мобильных браузеров
+                    </h3>
 
-              <p>
-                В домашнем задании тренируются навыки работы с адаптивной
-                версткой использование медиазапросов
-              </p>
+                    <p>
+                        В домашнем задании тренируются навыки работы с адаптивной
+                        версткой использование медиазапросов
+                    </p>
 
-              <p>Необходимо</p>
-              <ul>
-                <li>в репозитоии из прошлого задания сделать новую ветку</li>
-                <li>в этой ветке добавить адаптив на страницы вашего блога</li>
-                <li>сделать пуллреквест</li>
-                <li>
-                  ссылку на изменения и на задеплоенные страницы (с указанием
-                  breakpoints ) сбросить в чат преподавателю
-                </li>
-              </ul>
+                    <p>Необходимо</p>
+                    <ul>
+                        <li>в репозитоии из прошлого задания сделать новую ветку</li>
+                        <li>в этой ветке добавить адаптив на страницы вашего блога</li>
+                        <li>сделать пуллреквест</li>
+                        <li>
+                            ссылку на изменения и на задеплоенные страницы (с указанием
+                            breakpoints ) сбросить в чат преподавателю
+                        </li>
+                    </ul>
 
-              <p>Критерии оценки:</p>
-              <ul>
-                <li>
-                  внешний вид страницы в мобильном и десктнопном браузере
-                  отличаются (и выглядят прилично) - 1 балл за страницу
-                  (максимум 5 баллов)
-                </li>
-                <li>eсть страница с созданием burger-menu - 1 балл</li>
-              </ul>
-              <p>Статус принято ставится от 4 баллов</p>
-            </article>
-          </details>
+                    <p>Критерии оценки:</p>
+                    <ul>
+                        <li>
+                            внешний вид страницы в мобильном и десктнопном браузере
+                            отличаются (и выглядят прилично) - 1 балл за страницу
+                            (максимум 5 баллов)
+                        </li>
+                        <li>eсть страница с созданием burger-menu - 1 балл</li>
+                    </ul>
+                    <p>Статус принято ставится от 4 баллов</p>
+                </article>
+            </details>
 
-          <details>
-            <summary>
-              Оптимизировать сверстаные страницы по lighthouse и проверить на
-              a11y
-            </summary>
+            <details>
+                <summary>Оптимизировать сверстаные страницы по lighthouse и проверить на
+                    a11y
+                </summary>
 
-            <h2>
-              Оптимизировать сверстаные страницы по lighthouse и проверить на
-              a11y
-            </h2>
-            <h3>
-              Цель: В процессе выполнения ДЗ вы узнаете по каким метрикам можно
-              оценивать страницу
-            </h3>
+                <h2>
+                    Оптимизировать сверстаные страницы по lighthouse и проверить на
+                    a11y
+                </h2>
+                <h3>
+                    Цель: В процессе выполнения ДЗ вы узнаете по каким метрикам можно
+                    оценивать страницу
+                </h3>
 
-            <p>Тренируются навыки</p>
-            <ul>
-              <li>использования инструментов оценки веб-страниц</li>
-              <li>оптимизация страниц под заданные параметры</li>
-            </ul>
+                <p>Тренируются навыки</p>
+                <ul>
+                    <li>использования инструментов оценки веб-страниц</li>
+                    <li>оптимизация страниц под заданные параметры</li>
+                </ul>
 
-            <p>Необходимо:</p>
-            <ul>
-              <li>в репозитории прошлого задания сделать новую ветку</li>
-              <li>прогнать текущие страницы через lighthouse</li>
-              <li>сделать скриншоты оценок ДО</li>
-              <li>
-                улучшить показати Performance, Accessibility, SEO, Best
-                Practicies минимум до 95%
-              </li>
-              <li>
-                проверить страницы на https://validator.w3.org/ и исправить
-                ошибки
-              </li>
-              <li>сделать скриншоты оценок ПОСЛЕ</li>
-              <li>
-                создать пуллреквест, в описание к пуллреквесту прикрепить
-                скриншоты ДО/ПОСЛЕ (подписав)
-              </li>
-              <li>
-                ссылку на пуллреквест и на задеплоенные страницы сбросить в чат
-                с преподавателем
-              </li>
-            </ul>
+                <p>Необходимо:</p>
+                <ul>
+                    <li>в репозитории прошлого задания сделать новую ветку</li>
+                    <li>прогнать текущие страницы через lighthouse</li>
+                    <li>сделать скриншоты оценок ДО</li>
+                    <li>
+                        улучшить показати Performance, Accessibility, SEO, Best
+                        Practicies минимум до 95%
+                    </li>
+                    <li>
+                        проверить страницы на https://validator.w3.org/ и исправить
+                        ошибки
+                    </li>
+                    <li>сделать скриншоты оценок ПОСЛЕ</li>
+                    <li>
+                        создать пуллреквест, в описание к пуллреквесту прикрепить
+                        скриншоты ДО/ПОСЛЕ (подписав)
+                    </li>
+                    <li>
+                        ссылку на пуллреквест и на задеплоенные страницы сбросить в чат
+                        с преподавателем
+                    </li>
+                </ul>
 
-            <p>Критерии оценки:</p>
-            <ul>
-              <li>
-                страница имеет все показатели не ниже 95% - 1 балл за страницу
-                (не больше 4)
-              </li>
-              <li>
-                страница проходит проверку на https://validator.w3.org/ без
-                ошибок - 1 балл за страницу (не более 2)
-              </li>
-              <li>
-                страница имеет все показатели 100% - 1 балл за страницу (не
-                больше 4, если страница имеет все показатели 100 - это два балла
-                - 1 по этому пункту и 1 по прошлому) Статус принято ставится от
-                4 баллов
-              </li>
-            </ul>
-          </details>
+                <p>Критерии оценки:</p>
+                <ul>
+                    <li>
+                        страница имеет все показатели не ниже 95% - 1 балл за страницу
+                        (не больше 4)
+                    </li>
+                    <li>
+                        страница проходит проверку на https://validator.w3.org/ без
+                        ошибок - 1 балл за страницу (не более 2)
+                    </li>
+                    <li>
+                        страница имеет все показатели 100% - 1 балл за страницу (не
+                        больше 4, если страница имеет все показатели 100 - это два балла
+                        - 1 по этому пункту и 1 по прошлому) Статус принято ставится от
+                        4 баллов
+                    </li>
+                </ul>
+            </details>
+
+            <details>
+                <summary>Разработать слайдер, который подключается к странице и позволяет получить аналог boostrap
+                    carusel
+                </summary>
+                <h2>Цель:</h2>
+
+                <p>В результате выполнения ДЗ вы создадите свою подключаемую библиотеку, которую в дальнейшем сможете
+                    использовать на своих страницах</p>
+                <p>В задании тренируются навыки</p>
+                <ul>
+                    <li>работы с DOM элементами из javascript</li>
+                    <li>стилизация DOM-элементов</li>
+                </ul>
+
+                <h3>Необходимо</h3>
+                <ul>
+                    <li>в репозитории прошлого проекта создать новую ветку</li>
+                    <li> на главную страницу добавить разметку для слайдера ul > li > img, добавить на корневой ul
+                        элемент класс
+                        для виджета карусели
+                    </li>
+                    <li>добавить файл js и написать в нем код, который вместо отображения списка картинок позволит
+                        работать с
+                        каруселью ( работать должно как
+                        https://getbootstrap.com/docs/4.0/components/carousel/#with-controls )
+                        проверить работу карусели на мобильном браузере
+                    </li>
+                    <li>сделать пуллреквест</li>
+                    <li>ссылку на пуллреквест и на задеплоенную страницу сбросить в чат с преподавателем</li>
+                </ul>
+                <h4>Критерии оценки:</h4>
+                <ul>
+                    <li>на главной странице добавлена разметка для карусели - 1 балл</li>
+                    <li>добавлен скрипт, который отвечает за работу карусели - 2 балла</li>
+                    <li>скрипт поддерживает инициализацию карусели после загрузки страницы (можно создавать свои
+                        экземпляры карусели) - 1 балл
+                    </li>
+                    <li>карусель позволяет программно изменять слайды - 1 балл</li>
+                    <li>код покрыт тестами - 1 балл</li>
+                    <li>принято ставится от 4 баллов</li>
+                    <li>Если код не проходит линтинг - задание заворачивается на доработку</li>
+                </ul>
+
+            </details>
+
+            <%= require('html-loader?{"attributes": false}!./parts/carusel.html') %>
+
         </main>
-      </div>
+
+
+
     </div>
-    <%= require('html-loader?{"attributes": false}!./parts/footer.html') %>
-  </body>
+</div>
+<%= require('html-loader?{"attributes": false}!./parts/footer.html') %>
+</body>
 </html>
