--- a/pages/parts/carusel.html
+++ b/pages/parts/carusel.html
@@ -1,6 +1,8 @@
 <div class="carousel__list">
-<!--       <a class="next">&lt</a>-->
-    <button class="btn">Кнопка</button>
-        <img class="carousel__sliderImg" src="./images/VK.com-logo.svg"/>
-        <a class="previous">&gt</a>
+  <!--       <a class="next">&lt</a>-->
+  <button id="prevBtn" class="btn btn-left">&lt;&lt;</button>
+  <div class="aspect-ratio-box">
+    <img class="carousel__sliderImg" />
+  </div>
+  <button id="nextBtn" class="btn btn-right">&gt;&gt;</button>
 </div>
