--- a/pages/main.html
+++ b/pages/main.html
@@ -219,7 +219,7 @@
               <li>принято ставится от 4 баллов</li>
               <li>
                 Если код не проходит линтинг - задание заворачивается на
-                доработку
+                доработку -2
               </li>
             </ul>
           </details>
