Разработать слайдер, который подключается к странице и позволяет получить аналог boostrap carusel (#4)

--- a/pages/main.html
+++ b/pages/main.html
@@ -163,6 +163,69 @@
               </li>
             </ul>
           </details>
+
+          <details>
+            <summary>
+              Разработать слайдер, который подключается к странице и позволяет
+              получить аналог boostrap carusel
+            </summary>
+            <h2>Цель:</h2>
+
+            <p>
+              В результате выполнения ДЗ вы создадите свою подключаемую
+              библиотеку, которую в дальнейшем сможете использовать на своих
+              страницах
+            </p>
+            <p>В задании тренируются навыки</p>
+            <ul>
+              <li>работы с DOM элементами из javascript</li>
+              <li>стилизация DOM-элементов</li>
+            </ul>
+
+            <h3>Необходимо</h3>
+            <ul>
+              <li>в репозитории прошлого проекта создать новую ветку</li>
+              <li>
+                на главную страницу добавить разметку для слайдера ul > li >
+                img, добавить на корневой ul элемент класс для виджета карусели
+              </li>
+              <li>
+                добавить файл js и написать в нем код, который вместо
+                отображения списка картинок позволит работать с каруселью (
+                работать должно как
+                https://getbootstrap.com/docs/4.0/components/carousel/#with-controls
+                ) проверить работу карусели на мобильном браузере
+              </li>
+              <li>сделать пуллреквест</li>
+              <li>
+                ссылку на пуллреквест и на задеплоенную страницу сбросить в чат
+                с преподавателем
+              </li>
+            </ul>
+            <h4>Критерии оценки:</h4>
+            <ul>
+              <li>
+                на главной странице добавлена разметка для карусели - 1 балл
+              </li>
+              <li>
+                добавлен скрипт, который отвечает за работу карусели - 2 балла
+              </li>
+              <li>
+                скрипт поддерживает инициализацию карусели после загрузки
+                страницы (можно создавать свои экземпляры карусели) - 1 балл
+              </li>
+              <li>карусель позволяет программно изменять слайды - 1 балл</li>
+              <li>код покрыт тестами - 1 балл</li>
+              <li>принято ставится от 4 баллов</li>
+              <li>
+                Если код не проходит линтинг - задание заворачивается на
+                доработку -2
+              </li>
+            </ul>
+          </details>
+
+          <%= require('html-loader?{"attributes": false}!./parts/carusel.html')
+          %>
         </main>
       </div>
     </div>
